--- a/jogador.html
+++ b/jogador.html
@@ -1,128 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jogador - Guilda HUB</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/lucide@latest"></script>
-  <script>
-    tailwind.config = { theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857'} } } } }
-  </script>
-  <link rel="stylesheet" href="./style.css" />
-</head>
-<body class="bg-gray-50 text-gray-900 neon">
-  <div class="min-h-screen flex">
-    <!-- Sidebar -->
-    <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
-      <div class="p-5 flex items-center gap-3">
-        <div class="h-10 w-10 rounded-2xl bg-emerald-600 text-white flex items-center justify-center font-black">GH</div>
-        <div>
-          <div class="font-extrabold leading-tight">Guilda HUB</div>
-          <div class="text-xs text-gray-500">Acesso: <span class="font-bold">Jogador</span></div>
-        </div>
-      </div>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Jogador - Guilda HUB</title>
+<link href="global.css" rel="stylesheet"/><script src="https://cdn.tailwindcss.com"></script>
+<script src="https://unpkg.com/lucide@latest"></script>
 
-      <nav class="px-3 pb-3">
-        <a href="jogador.html" class="flex items-center gap-3 px-4 py-3 rounded-2xl bg-emerald-50 text-emerald-700 font-bold">
-          <i data-lucide="layout-dashboard" class="w-5 h-5"></i>
+<link href="./style.css" rel="stylesheet"/>
+</head>
+<body class="bg-gray-50 text-gray-900 gh-body">
+<div class="min-h-screen flex">
+<!-- Sidebar -->
+<aside class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static" id="sidebar">
+<div class="p-5 flex items-center gap-3">
+<div class="h-10 w-10 rounded-2xl bg-emerald-600 text-white flex items-center justify-center font-black">GH</div>
+<div>
+<div class="font-extrabold leading-tight">Guilda HUB</div>
+<div class="text-xs text-gray-500">Acesso: <span class="font-bold">Jogador</span></div>
+</div>
+</div>
+<nav class="px-3 pb-3">
+<a class="flex items-center gap-3 px-4 py-3 rounded-2xl bg-emerald-50 text-emerald-700 font-bold" href="jogador.html">
+<i class="w-5 h-5" data-lucide="layout-dashboard"></i>
           Dashboard
         </a>
-      </nav>
-
-      <div class="mt-auto p-4">
-        <div class="text-xs text-gray-500 mb-2">
-          Logado como: <span id="user-email" class="font-semibold text-gray-700"></span>
-        </div>
-        <button id="btn-logout" class="w-full px-4 py-3 rounded-2xl bg-gray-900 text-white font-bold hover:bg-black">
+</nav>
+<div class="mt-auto p-4">
+<div class="text-xs text-gray-500 mb-2">
+          Logado como: <span class="font-semibold text-gray-700" id="user-email"></span>
+</div>
+<button class="w-full px-4 py-3 rounded-2xl bg-gray-900 text-white font-bold hover:bg-black" id="btn-logout">
           Sair
         </button>
-      </div>
-    </aside>
-
-    <!-- Overlay + topbar -->
-    <div id="sidebar-overlay" class="fixed inset-0 bg-black/30 z-40 hidden lg:hidden"></div>
-
-    <div class="flex-1 lg:ml-0">
-      <header class="sticky top-0 z-20 bg-white/80 backdrop-blur border-b border-gray-100">
-        <div class="mx-auto max-w-5xl px-4 py-4 flex items-center justify-between">
-          <button id="mobile-menu-btn" class="lg:hidden h-11 w-11 rounded-2xl bg-gray-100 flex items-center justify-center z-50">
-            <i data-lucide="menu" class="w-5 h-5"></i>
-          </button>
-
-          <div>
-            <div class="font-extrabold">Dashboard do Jogador</div>
-            <div class="text-xs text-gray-500">Leitura da sua guilda + busca por ID</div>
-          </div>
-
-          <div class="text-right">
-            <div id="guild-name" class="text-sm font-bold text-gray-900"></div>
-            <div class="text-xs text-gray-500">Jogador</div>
-          </div>
-        </div>
-      </header>
-
-      <main class="mx-auto max-w-5xl px-4 py-6 space-y-6">
-        <!-- Search -->
-        <section class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
-          <div class="flex flex-col sm:flex-row sm:items-end gap-3">
-            <div class="flex-1">
-              <label class="block text-xs text-gray-500 mb-1">Pesquisar membro por ID</label>
-              <input id="search-id" type="text" inputmode="numeric" placeholder="Digite o ID do jogador..."
-                class="w-full px-4 py-3 rounded-2xl border border-gray-200 focus:outline-none focus:ring-2 focus:ring-emerald-200" />
-              <div class="mt-2 text-xs text-gray-400">Ao digitar um ID válido, você verá os detalhes do membro e os demais membros da guilda.</div>
-            </div>
-            <button id="btn-clear" class="sm:w-40 px-4 py-3 rounded-2xl bg-gray-100 font-bold hover:bg-gray-200">
+</div>
+</aside>
+<!-- Overlay + topbar -->
+<div class="fixed inset-0 bg-black/30 z-40 hidden lg:hidden" id="sidebar-overlay"></div>
+<div class="flex-1 lg:ml-0">
+<header class="sticky top-0 z-20 bg-white/80 backdrop-blur border-b border-gray-100">
+<div class="mx-auto max-w-5xl px-4 py-4 flex items-center justify-between">
+<button class="lg:hidden h-11 w-11 rounded-2xl bg-gray-100 flex items-center justify-center z-50" id="mobile-menu-btn">
+<i class="w-5 h-5" data-lucide="menu"></i>
+</button>
+<div>
+<div class="font-extrabold">Dashboard do Jogador</div>
+<div class="text-xs text-gray-500">Leitura da sua guilda + busca por ID</div>
+</div>
+<div class="text-right">
+<div class="text-sm font-bold text-gray-900" id="guild-name"></div>
+<div class="text-xs text-gray-500">Jogador</div>
+</div>
+</div>
+</header>
+<main class="mx-auto max-w-5xl px-4 py-6 space-y-6">
+<!-- Search -->
+<section class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
+<div class="flex flex-col sm:flex-row sm:items-end gap-3">
+<div class="flex-1">
+<label class="block text-xs text-gray-500 mb-1">Pesquisar membro por ID</label>
+<input class="w-full px-4 py-3 rounded-2xl border border-gray-200 focus:outline-none focus:ring-2 focus:ring-emerald-200" id="search-id" inputmode="numeric" placeholder="Digite o ID do jogador..." type="text"/>
+<div class="mt-2 text-xs text-gray-400">Ao digitar um ID válido, você verá os detalhes do membro e os demais membros da guilda.</div>
+</div>
+<button class="sm:w-40 px-4 py-3 rounded-2xl bg-gray-100 font-bold hover:bg-gray-200" id="btn-clear">
               Limpar
             </button>
-          </div>
-        </section>
-
-        <!-- Default dashboard -->
-        <section id="default-dashboard" class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-          <div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
-            <div class="text-xs text-gray-500 mb-2">Total de membros</div>
-            <div id="stat-members" class="text-3xl font-black">—</div>
-          </div>
-          <div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
-            <div class="text-xs text-gray-500 mb-2">Lines cadastradas</div>
-            <div id="stat-lines" class="text-3xl font-black">—</div>
-          </div>
-          <div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
-            <div class="text-xs text-gray-500 mb-2">Guilda</div>
-            <div id="stat-guild" class="text-lg font-extrabold leading-snug">—</div>
-          </div>
-        </section>
-
-        <!-- Search result -->
-        <section id="result-box" class="hidden space-y-4">
-          <div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
-            <div class="flex items-center justify-between gap-3">
-              <div>
-                <div class="text-xs text-gray-500">Membro encontrado</div>
-                <div id="result-title" class="text-xl font-black">—</div>
-              </div>
-              <span class="text-xs bg-emerald-50 text-emerald-700 px-3 py-1 rounded-full font-bold">Somente leitura</span>
-            </div>
-
-            <div id="result-details" class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-3 text-sm"></div>
-          </div>
-
-          <div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
-            <div class="text-sm font-extrabold mb-3">Outros membros da guilda</div>
-            <ul id="result-members" class="divide-y divide-gray-100"></ul>
-          </div>
-        </section>
-
-        <!-- Footer -->
-        <footer class="text-center text-xs text-gray-400 py-6">
+</div>
+</section>
+<!-- Default dashboard -->
+<section class="grid grid-cols-1 sm:grid-cols-3 gap-4" id="default-dashboard">
+<div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
+<div class="text-xs text-gray-500 mb-2">Total de membros</div>
+<div class="text-3xl font-black" id="stat-members">—</div>
+</div>
+<div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
+<div class="text-xs text-gray-500 mb-2">Lines cadastradas</div>
+<div class="text-3xl font-black" id="stat-lines">—</div>
+</div>
+<div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
+<div class="text-xs text-gray-500 mb-2">Guilda</div>
+<div class="text-lg font-extrabold leading-snug" id="stat-guild">—</div>
+</div>
+</section>
+<!-- Search result -->
+<section class="hidden space-y-4" id="result-box">
+<div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
+<div class="flex items-center justify-between gap-3">
+<div>
+<div class="text-xs text-gray-500">Membro encontrado</div>
+<div class="text-xl font-black" id="result-title">—</div>
+</div>
+<span class="text-xs bg-emerald-50 text-emerald-700 px-3 py-1 rounded-full font-bold">Somente leitura</span>
+</div>
+<div class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-3 text-sm" id="result-details"></div>
+</div>
+<div class="bg-white border border-gray-100 rounded-2xl p-5 shadow-sm">
+<div class="text-sm font-extrabold mb-3">Outros membros da guilda</div>
+<ul class="divide-y divide-gray-100" id="result-members"></ul>
+</div>
+</section>
+<!-- Footer -->
+<footer class="text-center text-xs text-gray-400 py-6">
           Guilda • HUB — acesso do Jogador (sem permissao de edicão)
         </footer>
-      </main>
-    </div>
-  </div>
-
-  <script type="module">
+</main>
+</div>
+</div>
+<script type="module">
     import { checkAuth, setupSidebar, initIcons, logout, showToast, db, getGuildContext } from "./logic.js";
     import { collection, getDocs, query, where, limit } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
