--- a/upgrade.html
+++ b/upgrade.html
@@ -1,132 +1,122 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Upgrade - Guild Manager</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/lucide@latest"></script>
-  <script>
-    tailwind.config = { theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857'} } } } }
-  </script>
-  <link rel="stylesheet" href="./style.css" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Upgrade - Guild Manager</title>
+<link href="global.css" rel="stylesheet"/><script src="https://cdn.tailwindcss.com"></script>
+<script src="https://unpkg.com/lucide@latest"></script>
+
+<link href="./style.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-50/80 neon">
-
-  <div class="flex min-h-screen">
-    <!-- Menu Mobile Overlay -->
-    <div id="sidebar-overlay" class="fixed inset-0 bg-black/30 z-40 hidden lg:hidden"></div>
-
-    <!-- Sidebar -->
-    <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
-      <div class="flex items-center justify-between p-5 border-b border-gray-100">
-        <div class="flex items-center gap-3">
-          <div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200">
-            <i data-lucide="shield" class="w-5 h-5 text-white"></i>
-          </div>
-          <div>
-            <p class="font-extrabold text-gray-800 leading-tight">Guilda e eventos</p>
-            <p id="vip-label" class="text-xs text-gray-500">Guilda: <span class="font-bold text-gray-800 uppercase">free</span></p>
-          </div>
+<body class="bg-gray-50/80 gh-body">
+<div class="flex min-h-screen">
+<!-- Menu Mobile Overlay -->
+<div class="fixed inset-0 bg-black/30 z-40 hidden lg:hidden" id="sidebar-overlay"></div>
+<!-- Sidebar -->
+<aside class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static" id="sidebar">
+<div class="flex items-center justify-between p-5 border-b border-gray-100">
+<div class="flex items-center gap-3">
+<div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200">
+<i class="w-5 h-5 text-white" data-lucide="shield"></i>
+</div>
+<div>
+<p class="font-extrabold text-gray-800 leading-tight">Guilda e eventos</p>
+<p class="text-xs text-gray-500" id="vip-label">Guilda: <span class="font-bold text-gray-800 uppercase">free</span></p>
+</div>
+</div>
+</div>
+<nav class="p-4 space-y-1">
+<a class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors" href="dashboard.html">
+<i class="w-5 h-5" data-lucide="house"></i> Dashboard
+        </a>
+<a class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors" href="membros.html">
+<i class="w-5 h-5" data-lucide="users"></i> Membros
+        </a>
+<a class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors" href="lines.html">
+<i class="w-5 h-5" data-lucide="layers"></i> Lines
+        </a>
+<a class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors" href="ajustes.html">
+<i class="w-5 h-5" data-lucide="sliders"></i> Ajustes
+        </a>
+<a class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm" href="upgrade.html">
+<i class="w-5 h-5" data-lucide="sparkles"></i> Upgrade
+        </a>
+<a class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors" href="camp.html">
+<i class="w-5 h-5" data-lucide="trophy"></i> Campeonato
+        </a>
+<a class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors" href="admin.html">
+<i class="w-5 h-5" data-lucide="settings"></i> Admin
+        </a>
+<a class="hidden w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors" href="chefe.html" id="nav-chefe">
+<i class="w-5 h-5" data-lucide="crown"></i> Chefe
+        </a>
+</nav>
+<div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
+<div class="flex items-center justify-between px-3 py-2">
+<div class="flex items-center gap-3">
+<div class="w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">A</div>
+<div>
+<p class="text-sm font-medium text-gray-700" id="user-role">Carregando...</p>
+<p class="text-xs text-gray-400 truncate w-24" id="user-email">...</p>
+</div>
+</div>
+<button class="p-2 text-gray-400 hover:text-red-500 transition-colors" id="btn-logout" title="Sair">
+<i class="w-4 h-4" data-lucide="log-out"></i>
+</button>
+</div>
+</div>
+</aside>
+<!-- Main -->
+<main class="flex-1 min-w-0">
+<header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-gray-200">
+<div class="flex items-center px-4 lg:px-8 py-4 gap-3">
+<button class="lg:hidden p-2 rounded-lg hover:bg-gray-100" id="mobile-menu-btn">
+<i class="w-5 h-5" data-lucide="menu"></i>
+</button>
+<div class="min-w-0 flex-1">
+<div class="flex items-center gap-2 w-full flex-nowrap">
+<h1 class="text-xl font-extrabold text-gray-900 leading-tight">Upgrade</h1>
+<span class="inline-flex items-center gap-2 px-3 py-1.5 rounded-xl bg-gray-50 text-gray-600 text-sm border border-gray-200 whitespace-nowrap ml-auto" id="current-plan-pill">
+<i class="w-4 h-4 text-emerald-500" data-lucide="sparkles"></i>
+<span>Plano atual: <b id="current-plan-name">—</b></span>
+</span>
+</div>
+<p class="text-sm text-gray-500 mt-1">Veja os planos disponíveis e o que muda em cada um.</p>
+</div>
+</div>
+</header>
+<section class="px-4 lg:px-8 py-6">
+<div class="grid grid-cols-2 lg:grid-cols-4 gap-3" id="plans"></div>
+<div class="mt-4 text-sm text-gray-600 bg-white rounded-xl border border-gray-200 p-4">
+<b>Como funciona a liberação:</b> após solicitar e confirmar o pagamento, a ativação do plano normalmente acontece em menos de <b>10 segundos</b>. Se o pagamento for aprovado e o plano <b>não ativar</b> entre em contato em nosso instagram <b>@guildahub</b>.
         </div>
-      </div>
-
-      <nav class="p-4 space-y-1">
-        <a href="dashboard.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
-          <i data-lucide="house" class="w-5 h-5"></i> Dashboard
-        </a>
-        <a href="membros.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
-          <i data-lucide="users" class="w-5 h-5"></i> Membros
-        </a>
-        <a href="lines.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
-          <i data-lucide="layers" class="w-5 h-5"></i> Lines
-        </a>
-        <a href="ajustes.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
-          <i data-lucide="sliders" class="w-5 h-5"></i> Ajustes
-        </a>
-        <a href="upgrade.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm">
-          <i data-lucide="sparkles" class="w-5 h-5"></i> Upgrade
-        </a>
-        <a href="camp.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
-          <i data-lucide="trophy" class="w-5 h-5"></i> Campeonato
-        </a>
-        <a href="admin.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
-          <i data-lucide="settings" class="w-5 h-5"></i> Admin
-        </a>
-        <a id="nav-chefe" href="chefe.html" class="hidden w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
-          <i data-lucide="crown" class="w-5 h-5"></i> Chefe
-        </a>
-      </nav>
-
-      <div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
-        <div class="flex items-center justify-between px-3 py-2">
-          <div class="flex items-center gap-3">
-            <div class="w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">A</div>
-            <div>
-              <p id="user-role" class="text-sm font-medium text-gray-700">Carregando...</p>
-              <p id="user-email" class="text-xs text-gray-400 truncate w-24">...</p>
-            </div>
-          </div>
-          <button id="btn-logout" class="p-2 text-gray-400 hover:text-red-500 transition-colors" title="Sair">
-            <i data-lucide="log-out" class="w-4 h-4"></i>
-          </button>
-        </div>
-      </div>
-    </aside>
-
-    <!-- Main -->
-    <main class="flex-1 min-w-0">
-      <header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-gray-200">
-        <div class="flex items-center px-4 lg:px-8 py-4 gap-3">
-          <button id="mobile-menu-btn" class="lg:hidden p-2 rounded-lg hover:bg-gray-100">
-            <i data-lucide="menu" class="w-5 h-5"></i>
-          </button>
-
-          <div class="min-w-0 flex-1">
-            <div class="flex items-center gap-2 w-full flex-nowrap">
-              <h1 class="text-xl font-extrabold text-gray-900 leading-tight">Upgrade</h1>
-              <span id="current-plan-pill" class="inline-flex items-center gap-2 px-3 py-1.5 rounded-xl bg-gray-50 text-gray-600 text-sm border border-gray-200 whitespace-nowrap ml-auto">
-                <i data-lucide="sparkles" class="w-4 h-4 text-emerald-500"></i>
-                <span>Plano atual: <b id="current-plan-name">—</b></span>
-              </span>
-            </div>
-            <p class="text-sm text-gray-500 mt-1">Veja os planos disponíveis e o que muda em cada um.</p>
-          </div>
-        </div>
-      </header>
-
-      <section class="px-4 lg:px-8 py-6">
-        <div id="plans" class="grid grid-cols-2 lg:grid-cols-4 gap-3"></div>
-        <div class="mt-4 text-sm text-gray-600 bg-white rounded-xl border border-gray-200 p-4">
-          <b>Como funciona a liberação:</b> após solicitar e confirmar o pagamento, a ativação do plano normalmente acontece em menos de <b>10 segundos</b>. Se o pagamento for aprovado e o plano <b>não ativar</b> entre em contato em nosso instagram <b>@guildahub</b>.
-        </div>
-      </section>
-
-      <footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 text-slate-700">
-        <div class="mx-auto w-full max-w-5xl px-4 py-10">
-          <div class="flex flex-col items-center gap-4">
-            <div class="flex items-center justify-center gap-3">
-              <a href="https://instagram.com/ottakubrasil" target="_blank" rel="noopener noreferrer" class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10">
-                <i data-lucide="instagram" class="h-5 w-5"></i>
-              </a>
-              <a href="https://instagram.com/gameotk" target="_blank" rel="noopener noreferrer" class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10">
-                <i data-lucide="instagram" class="h-5 w-5"></i>
-              </a>
-              <a href="https://ottakubrasil.online" target="_blank" rel="noopener noreferrer" class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10">
-                <i data-lucide="globe" class="h-5 w-5"></i>
-              </a>
-            </div>
-            <div class="text-center">
-              <p class="text-sm font-semibold tracking-wide text-slate-800">Ottakubrasil • Guilda Hub</p>
-              <p class="mt-2 max-w-xl text-xs leading-relaxed text-slate-600">Central de guilda e eventos: organização, velocidade e controle para facilitar sua vida no dia a dia.</p>
-              <p class="mt-4 text-xs text-slate-500">© Ottakubrasil • 2026</p>
-            </div>
-          </div>
-        </div>
-      </footer>
-    </main>
-  </div>
-
+</section>
+<footer class="mt-12 border-t border-emerald-500/10 text-slate-700" id="otk-footer">
+<div class="mx-auto w-full max-w-5xl px-4 py-10">
+<div class="flex flex-col items-center gap-4">
+<div class="flex items-center justify-center gap-3">
+<a class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10" href="https://instagram.com/ottakubrasil" rel="noopener noreferrer" target="_blank">
+<i class="h-5 w-5" data-lucide="instagram"></i>
+</a>
+<a class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10" href="https://instagram.com/gameotk" rel="noopener noreferrer" target="_blank">
+<i class="h-5 w-5" data-lucide="instagram"></i>
+</a>
+<a class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10" href="https://ottakubrasil.online" rel="noopener noreferrer" target="_blank">
+<i class="h-5 w-5" data-lucide="globe"></i>
+</a>
+</div>
+<div class="text-center">
+<p class="text-sm font-semibold tracking-wide text-slate-800">Ottakubrasil • Guilda Hub</p>
+<p class="mt-2 max-w-xl text-xs leading-relaxed text-slate-600">Central de guilda e eventos: organização, velocidade e controle para facilitar sua vida no dia a dia.</p>
+<p class="mt-4 text-xs text-slate-500">© Ottakubrasil • 2026</p>
+</div>
+</div>
+</div>
+</footer>
+</main>
+</div>
 <script type="module">
   import { checkAuth, setupSidebar, initIcons, logout, getVipTier, showToast, getGuildContext, applyVipUiAndGates, auth } from './logic.js';
 
@@ -523,6 +513,5 @@
   });
 
 </script>
-
 </body>
 </html>
